--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
       <form id="prediction-form" class="form-group">
         <dl>
           <dd>
-            <input id="input-text" type="textarea" name="text" placeholder="Text to check" class="form-control col-sm-4" reqiuired/>
+            <input id="input-text" type="textarea" name="text" placeholder="Text to check" class="form-control col-sm-4" required/>
           </dd>
           <br />
           <dd><input type="submit" class="btn btn-primary" value="Predict" /></dd>
